--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 apiclient==1.0.2
 decorator==4.0.2
+discovery==0.0.4
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.8.4
@@ -7,7 +8,7 @@ django-toolbelt==0.0.1
 gunicorn==19.3.0
 praw==3.2.1
 psycopg2==2.6.1
-requests==2.7.0
+requests==2.5.0
 six==1.9.0
 static3==0.6.1
 update-checker==0.11
